--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.24.0",
     "ionicons": "^5.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -65,7 +66,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "3.3.1"
+    "@capacitor/cli": "3.3.1",
+    "@ionic/lab": "3.2.10"
   },
   "description": "An Ionic project"
 }
